Site da Boleria Delícias da Laura ou melhor, da Alice (fictício)

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<p class= "cores">Nem pensar!</p>
 			<p>Nossa inauguração será na próxima semana...lá todos conhecerão nossos produtos >3</p>
 			<p>Depois disso, quem sabe, disponibilizaremos nossos produtos aqui também! </p>
-			<p class= "verde">Porém, se eu fosse você, correria logo para a nossa boleria,  pois por aqui poderão apenas olhar, saborear é lá em nossa bolearia!</p>
+			<p class= "verde">Porém, se eu fosse você, correria logo para a nossa boleria! Pois por aqui poderão apenas olhar, saborear é lá em nossa bolearia!</p>
 			<p><strong>TE ESPERAMOS LÁ</strong></p>
 			<p>Ahhh, só um detalhe...notou que nosso endereço não está aqui em nosso site? Pois bem, ele ficará disponível aqui apenas dois dias antes da inauguração</p>
 			<p>Mas como sabemos que planejamento é essencial, vamos deixar nosso endereço neste perfil do instagram: @karoline_acsa</p>
