Site da Boleria Delícias da Laura ou melhor, da Alice (fictício)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Boleria </h2>
 
-			<p>Localizada no coração da cidade a <strong>Boleria Delícias Da Laura</strong> traz para o mercado o que há de melhor no mundo dos bolos. Será inaugurada em breve, a Boleria Delícias Da Laura será destaque na cidade e conquistará novos clientes a cada dia. >3</p>
+			<p>Localizada no coração da cidade a <strong>Boleria Delícias Da Laura ou melhor, da Alice</strong> traz para o mercado o que há de melhor no mundo dos bolos. Será inaugurada em breve, a Boleria Delícias Da Laura será destaque na cidade e conquistará novos clientes a cada dia. >3</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar momentos que adocicam a vida de nossos clientes</strong></em></p>
 
