Site da Boleria Delícias da Laura ou melhor, da Alice (fictício)

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			
 			<p>Temos várioss bolos incríveis, mass achou mesmo que iriamos revelar eles agora???</p>
 			<p class= "cores">Nem pensar!</p>
-			<p>Nossa inauguração será na próxima semana...lá todos conhecerão nossos produtos >3</p>
+			<p>Nossa inauguração será na próxima semana...lá todos conhecerão nossos produtos <3</p>
 			<p>Depois disso, quem sabe, disponibilizaremos nossos produtos aqui também! </p>
 			<p class= "verde">Porém, se eu fosse você, correria logo para a nossa boleria! Pois por aqui poderão apenas olhar, saborear é lá em nossa boleria!</p>
 			<p><strong>TE ESPERAMOS LÁ</strong></p>
