--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<p>Depois disso, quem sabe, disponibilizaremos nossos produtos aqui também! </p>
 			<p class= "verde">Porém, se eu fosse você, correria logo para a nossa boleria! Pois por aqui poderão apenas olhar, saborear é lá em nossa boleria!</p>
 			<p><strong>TE ESPERAMOS LÁ</strong></p>
-			<p>Ahhh, só um detalhe...notou que nosso endereço não está aqui em nosso site? Pois bem, ele ficará disponível aqui apenas dois dias antes da inauguração</p>
+			<p>Ahhh, só um detalhe... notaram que o nosso endereço não está aqui em nosso site? Pois bem, ele ficará disponível aqui apenas dois dias antes da inauguração da boleria!</p>
 			<p>Mas como sabemos que planejamento é essencial, vamos deixar nosso endereço neste perfil do instagram: @karoline_acsa</p>
 			<p class= "cores">Contamos com VOCÊ!</p>
 
